<resources>
    <string name="app_name" translatable="false">Taskery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Taskery</string>
    <string name="app_name_real" translatable="false">Taskery</string>
    <string name="nav_header_subtitle" translatable="false">Plan your tasks in no time!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="task_detail_title">Fill in tasks</string>
    <string name="task_name">Name:</string>
    <string name="deadline">Deadline:</string>
    <string name="spent_per_day">Time spent per day:</string>
    <string name="time_per_week">How many times per week:</string>
    <string name="task_color">Task color:</string>
    <string name="duration">Total duration:</string>

    <string name="task_name_hint">eg. exercise</string>
    <string name="deadline_hint" translatable="false">DD/MM/YYYY</string>
    <string name="spent_per_day_hint" translatable="false">HH</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="sun">SUN</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="there_are_no_tasks_available_add_some_new_ones">There are no tasks available, add some new ones</string>
    <string name="there_are_no_tasks_today">There are no tasks today</string>
    <string name="add_task">Add task</string>
    <string name="agenda">Agenda</string>
    <string name="tasks">Tasks</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="set_freetime">Set freetime</string>
    <string name="from">From</string>
    <string name="hh">HH</string>
    <string name="hyphen">-</string>
    <string name="to">To</string>
    <string name="task_description">Task description:</string>
    <string name="task_description_hint">…</string>
    <string name="clear_all_tasks">Clear all tasks</string>
</resources>