<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_freetime" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/from"
            android:textSize="11sp" />

        <Button
            android:id="@+id/freeTimeStartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/hyphen"
            android:textSize="30sp" />

        <Button
            android:id="@+id/freeTimeEndBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/to"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>