<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_lighter"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="134dp"
        android:text="@string/task_detail_title"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="200dp"
        android:textColor="#FF0000" />

    <!--    <androidx.core.widget.NestedScrollView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="490dp">-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="334dp"
            android:text="@string/task_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/taskNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="31dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/task_name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="278dp"
            android:text="@string/duration"
            android:textSize="16sp" />

        <Button
            android:id="@+id/durationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/spent_per_day_hint"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="334dp"
            android:text="@string/task_description"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="31dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/task_description_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="170dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/brown_second_primary" />

        <Button
            android:id="@+id/remove_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:text="@string/remove"
            android:textColor="@color/brown_second_primary" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:text="@string/save"
            android:textColor="@color/brown_second_primary" />
    </LinearLayout>

</LinearLayout>
