<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.taskerycsia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_agenda"
        android:name="com.example.taskerycsia.ui.agenda.AgendaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.taskerycsia.ui.tasks.TaskFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/action_nav_tasks_to_nav_taskDetail"
            app:destination="@id/nav_taskDetail"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_taskDetail"
        android:name="com.example.taskerycsia.ui.taskDetail.TaskDetailFragment"
        android:label="Task Detail"
        tools:layout="@layout/fragment_task_detail">
        <action
            android:id="@+id/action_nav_taskDetail_to_nav_tasks"
            app:destination="@id/nav_tasks"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

</navigation>